objects/Account.object
<CustomObject><fields>
        <fullName>APTS_Create_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Vendor?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>APTS_Vendor_Id__c</fullName>
        <externalId>true</externalId>
        <label>Vendor Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Account_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Account_Status__c</fullName>
        <inlineHelpText>Determined by Helix Marketplace. Defaults to Pending. Set to Active when Helix Account is created. Set to Deleted when the Helix Marketplace has deleted the corresponding account in the oauth DB.</inlineHelpText>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Annual_Consumer_Base__c</fullName>
        <label>Annual Consumer Base</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Existing_DNA_Product__c</fullName>
        <label>Existing DNA Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Lab_Status__c</fullName>
        <label>Lab Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
                <value>
                    <fullName>Owned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Market_Cap__c</fullName>
        <label>Market Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>NON_BUYER_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should only be checked on a single SFDC Account record and will be used to house non-buyer Contacts. NO LONGER USED. TO BE DELETED.</description>
        <inlineHelpText>This should only be checked on a single SFDC Account record and will be used to house non-buyer Contacts. NO LONGER USED. TO BE DELETED.</inlineHelpText>
        <label>NON-BUYER Account</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Ownership_Type__c</fullName>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Partner_Description1__c</fullName>
        <label>Partner Description1</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Partner_Description2__c</fullName>
        <label>Partner Description2</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Partner_ID__c</fullName>
        <description>Helix-specified Partner ID. Used to associate Partner Accounts to Orders when a Partner ID is specified via the Helix Marketplace API.</description>
        <inlineHelpText>Helix-specified Partner ID. Used to associate Partner Accounts to Orders when a Partner ID is specified via the Helix Marketplace API.</inlineHelpText>
        <label>Partner ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Partner_Logo_URL__c</fullName>
        <description>This field points to the Partner Logo Image stored in SFDC "Documents". It is used to populate dynamically generated co-branded emails.</description>
        <inlineHelpText>This field points to the Partner Logo Image stored in SFDC "Documents". It is used to populate dynamically generated co-branded emails.</inlineHelpText>
        <label>Partner Logo URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Partner_Logo__c</fullName>
        <description>Image referenced by the Partner Logo URL.</description>
        <formula>IMAGE( Partner_Logo_URL__c , "Partner Logo")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Image referenced by the Partner Logo URL.</inlineHelpText>
        <label>Partner Logo</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Partner_Type__c</fullName>
        <description>Partner type mapped over from the lead object</description>
        <inlineHelpText>Please select Partner Type</inlineHelpText>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Partners</valueSetName>
        </valueSet>
    </fields><compactLayoutAssignment>Account_Compact_Layout</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><recordTypeTrackHistory>true</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews><listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews><listViews>
        <fullName>Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_ID__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Partner Accounts</label>
    </listViews><recordTypes>
        <fullName>Helix_B2B_Account</fullName>
        <active>true</active>
        <description>B2B Account Record Type for standard CRM use</description>
        <label>Helix B2B Account</label>
    </recordTypes><recordTypes>
        <fullName>Helix_B2C_Account</fullName>
        <active>true</active>
        <description>Record Type for Helix Marketplace Users</description>
        <label>Helix B2C Account</label>
    </recordTypes></CustomObject>